--- a/Styles/base.css
+++ b/Styles/base.css
@@ -65,6 +65,11 @@ footer {
     max-height: 100%;
 }
 
+#CompanyNameTextThing {
+    color: white;
+}
+
+
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 * {
