--- a/Styles/base.css
+++ b/Styles/base.css
@@ -50,6 +50,8 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    bottom: 0;
 }
 
 #footericonholder {
